--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_list.html
@@ -7,7 +7,7 @@
         <h3> Sites </h3>
         <ul>
             {% for site in sites %}
-                <li> {{site.sitename}}</li>
+                <li> <a href="/data-management/sites/{{site.sitename}}">{{site.sitename}}</a></li>
             {% endfor%}
         </ul>
     </div>
