--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_add.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_add.html
@@ -4,12 +4,34 @@
 
 {% block content %} 
 <div style="margin-top: 1rem;">
-    <h2> New Site Page </h2>
+    <h2> Add New Site </h2>
     <form method='post' action='/data-management/sites/add/'>
         {% csrf_token %}
         {{form.as_p}}
-        <button type='submit' name='save_leave'> Save </button>
-        <button type='submit' name='save_add_more'> Save and Add Another </button>
+
+        <p>&nbsp;</p>
+        <p> Upload Initial Images: 
+            <div class="input-group" style="margin-top:1rem;display:flex;align-items:center;">
+                <input type="file" id="actual-btn" multiple hidden name="images"/>
+                <label class="btn btn-success" for="actual-btn">Choose Files</label>
+                <span id="file-chosen" style="margin-left:1rem;">No file chosen</span>
+            </div> 
+            <small id="fileHelp" class="form-text text-muted">Files must be JPG files and follow the naming convention "sitename_YYYY_MM_DD_HHMMSS.jpg"</small>
+        </p>
+        <p>&nbsp;</p>
+        <button type='submit' class="btn btn-success" name='save_leave'> Save </button>
+        <button type='submit' class="btn btn-success" name='save_add_more'> Save and Add Another </button>
     </form>
+
+    <script>
+        const actualBtn = document.getElementById('actual-btn');
+        const fileChosen = document.getElementById('file-chosen');
+        actualBtn.addEventListener('change', function(){
+            if (this.files.length > 1) { fileChosen.textContent=this.files.length + ' Files Selected'}
+            else if (this.files.length = 1) { fileChosen.textContent='1 File Selected'}
+            else if (this.files.length < 1) { fileChosen.textContent='Select Files'}
+        })
+    </script>
+
 </div>
 {% endblock %}
