--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_image_gallery.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/site_image_gallery.html
@@ -1,7 +1,47 @@
 {% extends 'main/data_management.html' %}
 
+{% block style %}
+div.gallery {
+  margin: 5px;
+  border: 1px solid white;
+  float: left;
+  width: 330px;
+}
+
+div.gallery:hover {
+  background: lightgrey;
+}
+
+div.gallery img {
+  width: 100%;
+  height: auto;
+  object-fit: contain; 
+  width: 290px; 
+  height: auto; 
+  display: block; 
+  margin-left: auto; 
+  margin-right: auto; 
+  margin-top:1rem;
+}
+
+div.desc {
+  padding: 15px;
+  text-align: center;
+}
+{% endblock %}
+
 {% block content %}
-<div style="margin-top: 1rem;">
+<div class="col-sm" style="margin-top: 1rem;">
+<h1> &nbsp; {{site.sitename}} Image Gallery </h1>
+
+{% for image in images%}
+<div class="gallery">
+  <a target="_blank" href="./{{image.image_upload.name}}">
+    <img src="/media/{{image.image_upload.name}}"/>
+  </a>
+  <div class="desc">{{image.image_upload.name|slice:"7:-4"}}</div>
+</div>
+{% endfor %}
 
 </div>
 {% endblock %}
