--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
@@ -21,7 +21,8 @@
                 </div>
             </div>
             <div>
-                
+                {% block quick_links %}
+                {% endblock %}
             </div>
         </div>
     </div>
@@ -36,7 +37,3 @@
         </div>
         {% endblock %}
 </div>
-        
-
-
-
