--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/upload_images.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/upload_images.html
@@ -11,12 +11,14 @@
             <option value="{{site}}">{{site}}</option>
             {% endfor %}
         </select>
+        <p> &nbsp; </p>
         <div class="input-group" style="margin-top:1rem;display:flex;align-items:center;">
             <input type="file" id="actual-btn" multiple hidden name="images"/>
             <label class="btn btn-success" for="actual-btn">Choose Files</label>
             <span id="file-chosen" style="margin-left:1rem;">No file chosen</span>
         </div>
         <small id="fileHelp" class="form-text text-muted">Files must be JPG files and follow the naming convention "sitename_YYYY_MM_DD_HHMMSS.jpg"</small>
+        <p> &nbsp; </p>
         <button class="btn btn-success" type='submit' name='upload_all' value="upload_all" style="margin-top: 10px;"> Upload </button>
     </form>
 
