--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/data_management.html
@@ -4,7 +4,7 @@
 
 {% block navbar-datamanagement %}
     <li class="nav-item active">
-        <a class="nav-link" href="/data-management/">Data-Management <span class="sr-only">(current)</span> </a>
+        <a class="nav-link" href="/data-management/">Data Management <span class="sr-only">(current)</span> </a>
     </li>
 {% endblock %}
 
