--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/home.html
@@ -3,7 +3,7 @@
 {% block title %} Home {% endblock %}
 
 {% block content %}
-<div style="margin-top: 1rem;">
+<div style="margin-top: 1rem; margin-left: 18.5rem;">
     <h1>Home</h1>
     <p>blah blah blah</p>
 </div>
