--- a/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
+++ b/PhenologyAnalysisWebApp/pheno_webapp/main/templates/main/base.html
@@ -5,6 +5,8 @@
     <link rel='stylesheet' type='text/css' href={% static 'bootstrap.min.css' %}/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    {% block links %} {% endblock %}
+    
     <style>
       #page-container {
         position: relative;
@@ -51,18 +53,11 @@
     <title> {% block title %} Phenology Analysis Tool {% endblock%} </title>
   </head>
 
-  <body>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="https://code.highcharts.com/highcharts.js"></script>
-    <script src="https://code.highcharts.com/maps/modules/map.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
-    
+  <body>    
     <div id="page-container">
       <header id='header'>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-          <a class="navbar-brand" href='/'>Phenology Scientific Analysis Tool</a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="height: 4rem;">
+          <a class="navbar-brand" href='/' style="">Phenology Scientific Analysis Tool</a>
           <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -70,7 +65,7 @@
             <ul class="navbar-nav mr-auto">
               {% block navbar-datamanagement %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/data-management/">Data-Management</a>
+                  <a class="nav-link" href="/data-management/">Data Management</a>
                 </li>
               {% endblock %}
               {% block navbar-analysis %}
@@ -85,7 +80,7 @@
               {% endblock %}
               {% block navbar-sitemap %}
                 <li class="nav-item">
-                  <a class="nav-link" href="/site-map/"> Site Map</a>
+                  <a class="nav-link" href="/site-map/site-locations/"> Site Map </a>
                 </li>
               {% endblock %}
             </ul>
@@ -132,5 +127,13 @@
         </p>
       </footer>
     </div>
+    {% block jsScripts%}
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+      <script src="https://code.highcharts.com/highcharts.js"></script>
+      <script src="https://code.highcharts.com/maps/modules/map.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/jstat@latest/dist/jstat.min.js"></script>
+    {% endblock %}
   </body>
 </html>
